# gRPC-Rust-Instances

./: Cargo.toml  build.rs  readme.md
src/: chat_client.rs  chat_server.rs  client.rs  lib.rs  server.rs
src/proto/: chatter.proto  greeter.proto
