[package]
name = "grpc_practice"
version = "0.1.0"
edition = "2021"

# Greeter Binaries
[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"

# Chat Binaries (New)
[[bin]]
name = "chat_server"
path = "src/chat_server.rs"
[[bin]]
name = "chat_client"
path = "src/chat_client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1" # Needed for stream manipulation

[build-dependencies]
tonic-build = "0.11"